<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/my_purple"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/edit_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_height"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:textAlignment="center"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@+id/tilQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/quantity"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:startIconDrawable="@drawable/ic_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/price"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilQuantity"
        app:layout_constraintVertical_bias="0.15"
        app:startIconDrawable="@drawable/ic_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/box_height"
        android:onClick="click"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="#A471FF"
        app:cornerRadius="@dimen/box_radius"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.85">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/box_height"
        android:onClick="click"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="#A471FF"
        app:cornerRadius="@dimen/box_radius"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.85">

    </com.google.android.material.button.MaterialButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>